--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.23.0",
+    "axios": "^0.26.0",
     "faunadb": "^4.4.2",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
